<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="album" type="com.example.app_vinilos_g17.models.Album"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewCover"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/descripcion_imagen"
                    android:scaleType="centerCrop"
                    app:loadImage="@{album.cover}" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{album.name}"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fecha_de_publicaci_n"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/textViewReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{album.releaseDate}"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/g_nero"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/textViewGenre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{album.genre}"
                            android:textSize="14sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sello"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:id="@+id/textViewRecordLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{album.recordLabel}"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{album.description}"
                android:textSize="16sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/textViewPerformersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/int_rpretes"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPerformers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_marginBottom="16dp"/>


            <!-- Sección de Tracks -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewTracksTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pistas"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="16dp"/>
                <ImageButton
                    android:id="@+id/add_track"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/add_track"
                    android:src="@drawable/add_circle_24px"
                    app:tint="#3D0F5E" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/textViewNoTracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_hay_tracks_disponibles"
                android:visibility="gone" /> <!-- Ocultado por defecto -->

            <LinearLayout
                android:id="@+id/addtrack_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_post_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Nombre: " />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_post_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Duración: " />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/post_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Crear" />

            </LinearLayout>

            <!-- Sección de Comments -->
            <TextView
                android:id="@+id/textViewCommentsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comentarios"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:id="@+id/textViewNoComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_hay_comentarios"
                android:visibility="gone" />

            <TextView
                android:id="@+id/scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"/>


        </LinearLayout>
    </ScrollView>
</layout>
